--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.0) unstable; urgency=low
+
+  * new version, merge to master.
+
+ -- Shell.Xu <shell909090@gmail.com>  Wed, 20 Nov 2013 20:18:14 +0800
+
 goproxy (1.9) unstable; urgency=low
 
   * pre-release for reusetcp.
