--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.0.1) unstable; urgency=low
+
+  * enhanced lock.
+
+ -- Shell.Xu <shell909090@gmail.com>  Fri, 22 Nov 2013 15:07:55 +0800
+
 goproxy (2.0) unstable; urgency=low
 
   * new version, merge to master.
