--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.0.2) unstable; urgency=low
+
+  * change loop mode.
+
+ -- Shell Xu <shell909090@gmail.com>  Sun, 24 Nov 2013 00:29:41 +0800
+
 goproxy (2.0.1) unstable; urgency=low
 
   * enhanced lock.
