--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.0.4) UNRELEASED; urgency=low
+
+  * memory optimized
+
+ -- Shell.Xu <shell909090@gmail.com>  Wed, 27 Nov 2013 11:41:02 +0800
+
 goproxy (2.0.3) unstable; urgency=low
 
   * change close mode back.
