--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-goproxy (2.0.4) UNRELEASED; urgency=low
+goproxy (2.0.4) unstable; urgency=low
 
-  * memory optimized
+  * memory optimized.
+  * change iv mode.
 
- -- Shell.Xu <shell909090@gmail.com>  Wed, 27 Nov 2013 11:41:02 +0800
+ -- Shell Xu <shell909090@gmail.com>  Thu, 28 Nov 2013 23:16:23 +0800
 
 goproxy (2.0.3) unstable; urgency=low
 
