--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.1) UNRELEASED; urgency=medium
+
+  * use github.com/op/go-logging as logging system.
+
+ -- Shell.Xu <shell909090@gmail.com>  Thu, 24 Apr 2014 17:48:54 +0800
+
 goproxy (2.0.7) unstable; urgency=medium
 
   * config with json.
