--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goproxy (2.1.2) UNRELEASED; urgency=medium
+
+  * I don't known
+
+ -- Shell.Xu <shell909090@gmail.com>  Mon, 28 Apr 2014 20:13:17 +0800
+
 goproxy (2.1.1) unstable; urgency=medium
 
   [ Shell.Xu ]
