--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 goproxy (2.1.2) UNRELEASED; urgency=medium
 
-  * I don't known
+  * remove time wait
 
  -- Shell.Xu <shell909090@gmail.com>  Mon, 28 Apr 2014 20:13:17 +0800
 
