--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-goproxy (2.1.4) UNRELEASED; urgency=medium
+goproxy (2.2.0) UNRELEASED; urgency=medium
 
-  * iv from server
+  * update dns system
 
- -- Shell.Xu <shell909090@gmail.com>  Fri, 20 Jun 2014 15:17:35 +0800
+ -- Shell Xu <shell909090@gmail.com>  Sun, 22 Jun 2014 18:04:49 +0800
+
+goproxy (2.1.4) unstable; urgency=medium
+
+  [ Shell.Xu ]
+  * iv from server.
+
+ -- Shell Xu <shell909090@gmail.com>  Sun, 22 Jun 2014 18:04:29 +0800
 
 goproxy (2.1.3) unstable; urgency=medium
 
