* new session pool system. WARNING: that's no lock in management system. So use management page when another goroutine modify sessions/ports will get mistake.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-goproxy (2.2.0) UNRELEASED; urgency=medium
+goproxy (2.2.1) UNRELEASED; urgency=medium
 
-  * update dns system
+  * session pool system
 
- -- Shell Xu <shell909090@gmail.com>  Sun, 22 Jun 2014 18:04:49 +0800
+ -- Shell Xu <shell909090@gmail.com>  Wed, 25 Jun 2014 00:23:38 +0800
+
+goproxy (2.2.0) unstable; urgency=medium
+
+  * update dns system.
+
+ -- Shell Xu <shell909090@gmail.com>  Wed, 25 Jun 2014 00:23:22 +0800
 
 goproxy (2.1.4) unstable; urgency=medium
 
