--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-goproxy (2.2.1) UNRELEASED; urgency=medium
+goproxy (2.2.1) unstable; urgency=medium
 
-  * session pool system
+  [ Shell Xu ]
+  * session pool system.
 
- -- Shell Xu <shell909090@gmail.com>  Wed, 25 Jun 2014 00:23:38 +0800
+ -- Shell.Xu <shell909090@gmail.com>  Sat, 28 Jun 2014 01:17:03 +0800
 
 goproxy (2.2.0) unstable; urgency=medium
 
