--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+goproxy (2.2.2) UNRELEASED; urgency=low
+
+  + lru cache
+  * fix issue
+
+ -- Shell.Xu <shell909090@gmail.com>  Wed, 23 Jul 2014 09:03:38 +0800
+
 goproxy (2.2.1) unstable; urgency=medium
 
   [ Shell Xu ]
